# wallstreetprep-calculating-beta-python-lesson

./: README.md  build_notebooks.py  calculating_beta_instructor.ipynb  calculating_beta_student.ipynb  pyproject.toml
data/: CCL.csv  DIS.csv  GSPC.csv  KO.csv
