[project]
name = "calculating-beta-python-lesson"
version = "1.0.0"
description = "Wall Street Prep lesson: calculating beta from historical price data with pandas and statsmodels"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "statsmodels>=0.14",
    "yfinance>=0.2.50",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]
